# projectClient

./: CMakeLists.txt  client.cpp  client.h  jsondialog.cpp  jsondialog.h  jsondialog.ui  jsonformater.cpp  jsonformater.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectClient_ru_RU.ts  udpclient.cpp  udpclient.h
bins/: projectClient
bins/data/: clientInit.ini
